--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 </body>
 
 <footer>
-    <p style="text-align: center;color:white">By Sana-software </p>
+    <p style="text-align: center;color:white">By Najma Mohamed </p>
   </footer>
 </html>
